tests/invalid/generated_binop_bitor_float_str/main.py
# Auto-generated invalid binop case.
def main() -> None:
    x: float = 1.0
    y: str = "hello"
    z = x | y
